# add-a-triangle-to-the-picture

./: README.md
dz_1/: CMakeLists.txt  main.cpp
